@@ -20,38 +20,19 @@
 <TD VALIGN="TOP" BGCOLOR="#FFFFFF">
 <FONT SIZE="5"><STRONG>Additional Resource:</STRONG></FONT><BR>
 <BR>
-<FONT SIZE="4"><STRONG>Hidden Settings</STRONG></FONT><BR>
+<FONT SIZE="4"><STRONG>Interesting Links...</STRONG></FONT><BR>
+Here are some links to some iTerm related websites.<BR>
+<UL>
+<LI><A HREF="http://damonparker.org/blog/2005/09/14/iterm-tricks/">Applescript for opening a session</A> by Damon Parker</LI>
+<LI><A HREF="http://damonparker.org/blog/2006/11/13/iterm-and-growl/">A Growl trick.</A> by Damon Parker</LI>
+<LI><A HREF="http://xanana.ucsc.edu/xtal/iterm_tab_customization.html">A collection of iTerm Shell Customizations for bash, zsh and tcsh</A> from William G. Scott</LI>
+<LI><A HREF="http://www.macosxhints.com/article.php?story=20030609222910699">Use iTerm with OnMyCommand</A> from macosxhints</LI>
+<LI><A HREF="http://www.bigbold.com/snippets/tag/iTerm">Open current directory in iTerm</A></LI>
 <BR>
-There are a few settings that you cannot access via iTerm's own
-Preferences panel. However, you can use 'defaults" command to
-change them to your taste. The available settins along with the
-default settings are:<BR>
-<ul>
-  defaults write iTerm UseUnevenTabs -bool false<BR>
-  defaults write iTerm MinTabWidth -int 75        <BR>
-  defaults write iTerm MinCompactTabWidth -int 60<BR>
-  defaults write iTerm OptimumTabWidth -int 175<BR><BR>
-  defaults write iTerm StrokeWidth -float 0<BR>
-  defaults write iTerm BoldStrokeWidth -float -2<BR><BR>
-  defaults write iTerm CacheSize -float 2048<BR>
-  defaults write iTerm SearchCommand -string "http://google.com/search?q=%@"<BR>
-</ul>
-
-The first four are for setting the tab size. And the next 2 are for setting the stroke width
-of fonts rendering. The numbers in the example are all default settings. Experiment with
-different numbers. For example, to enable antialias for very small fonts, type these commands:
-<ul>
-  defaults write iTerm StrokeWidth -float -1<BR>
-</ul>
-
-The CacheSize is the number of characters that are cached for rendering.
-Increase it when you use a lot of different colors and a large character set. The last one
-is for the search command launched from the contextual menu. The default is to use google.
-You can set it to anything you want. For example, if you like yahoo, here is the command:<BR>
-<ul>
-  defaults write iTerm SearchCommand -string "http://search.yahoo.com/search?p=%@"
-</ul>
-
+<LI><A HREF="http://docs.blacktree.com/quicksilver/plug-ins/iterm?DokuWiki=">iTerm plugin</A> for Quicksilver.</LI>
+<LI><A HREF="http://www.tco.net/~dscott/software/itermhere/">iTerm Here</A></LI>
+<LI><A HREF="http://widgetterm.sourceforge.net/">WidgetTerm</A>: A mini terminal in your dash board.</LI>
+</UL>
 
 <FONT SIZE="4"><STRONG>Fonts:</STRONG></FONT> <BR><BR>
 Starting from 0.8.0, iTerm no longer requires monospace fonts. For older versions, you
@@ -158,14 +139,6 @@ fi
 typing: "open -a " and then pressing tab will try and complete any 
 application... (added an alias run as well)<BR><BR>
 
-<FONT SIZE="4"><STRONG>Interesting Links...</STRONG></FONT><BR>
-Here are some links to some iTerm related websites.<BR>
-<UL>
-<LI><A HREF="http://damonparker.org/blog/2005/09/14/iterm-tricks/">Applescript for opening a session</A> by Damon Parker</LI>
-<LI><A HREF="http://xanana.ucsc.edu/xtal/iterm_tab_customization.html">iTerm Shell Customizations for bash, zsh and tcsh</A> from William G. Scott</LI>
-<LI><A HREF="http://applewoods.blogspot.com/2004/12/iterm-bbs.html">iTerm Tutorial in Chinese</A> (for version0.8.x)</LI>
-<LI><A HREF="http://www.hawaii.edu/itsdocs/mac/iterm.pdf">Getting Started with iTerm</A> from University of Hawaii (for version 0.7.8) </LI>
-<LI><A HREF="http://www.macosxhints.com/article.php?story=20030609222910699">Use iTerm with OnMyCommand</A> from macosxhints</LI>
 </TD>
 <TD VALIGN="TOP" BGCOLOR="#FFFFFF">
 <script type="text/javascript"><!--
